[package]
name = "innodb_recovery"
version = "0.1.0"
edition = "2021"
default-run="page_explore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
circular-buffer = "0.1.7"
clap = { version = "4.5.9", features = ["derive"] }
crc = "3.2.1"
indicatif = "0.17.8"
num_enum = "0.7.2"
simple_endian = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lib]
name="innodb"
path="src/lib.rs"
